functions are more independently

--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 </head>
 <body class="container">
 
-<div class=" d-inline-block col-12 col-l-12 mt-5 pt-5 justify-content-evenly" >
-<button class="btn btn-success col-1" onmouseup="btn1()">button 1</button>
-<button class="btn btn-success col-1" onmouseup="btn2()">button 2</button>
-<button class="btn btn-success col-1" onmouseup="btn3()">button 3</button>
-<button class="btn btn-success col-1" onmouseup="btn4()">button 4</button>
-<button class="btn btn-success col-1" onmouseup="btn5()">button 5</button>
+<div class=" d-inline-block col-12 col-l-12 mt-4 mb-4 pt-5 justify-content-evenly" >
+<button class="btn btn-success col-1 mb-4" onmouseup="btn1()">button 1</button>
+<button class="btn btn-success col-1 mb-4" onmouseup="btn2()">button 2</button>
+<button class="btn btn-success col-1 mb-4" onmouseup="btn3()">button 3</button>
+<button class="btn btn-success col-1 mb-4" onmouseup="btn4()">button 4</button>
+<button class="btn btn-success col-1 mb-4" onmouseup="btn5()">button 5</button>
 <div class="container col-l-12 border border-primary pt-2 pb-2 pl-4 ">
     <p class="col-12 ml-4">wright a number of the line, which you want to remove</p>
-    <input class="col-6 ml-4" placeholder="here number needed" id="itemForRemove">
+    <input class="col-6 ml-4" type="number" placeholder="here number needed" id="itemForRemove">
 <button class="btn btn-success col-6" onmouseup="btn6()">button 6</button>
 </div>
 </div>
